Tweak this toList